# lss

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BUILD_LINUX.md  CONTRIBUTING.md  Dockerfile.simple  EVALS.md  README.md  SKILL.md  __main__.py  build-linux.sh  dockerfile  install.sh  kb_config.py  kb_fusion.py  kb_store.py  lss_cli.py  lss_config.py  lss_extract.py  lss_store.py  lss_sync.py  pyproject.toml  semantic_search.py
.github/workflows/: publish.yml  release.yml  update-submodule.yml
dev/: WORKFLOWS.md
tests/: conftest.py  test_beir.py  test_benchmark.py  test_chunking.py  test_cli_validation.py  test_e2e.py  test_embedding_provider.py  test_extract.py  test_filtering.py  test_lss_cli.py  test_lss_store.py  test_lss_sync.py  test_search.py  test_search_filters.py  test_search_quality.py
tests/eval_docker/: Dockerfile
tests/evaluation/: beir_adapter.py  corpus.py  golden_set.json  harness.py
