[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
  "__main__.py",
  "lss_cli.py",
  "lss_config.py",
  "lss_extract.py",
  "lss_store.py",
  "lss_sync.py",
  "semantic_search.py",
]

[project]
name = "local-semantic-search"
version = "0.5.4"
description = "Local semantic search over your files — BM25 + embeddings (OpenAI or 100% offline via fastembed) with smart chunking, document extraction, and real-time file watching."
authors = [{ name = "Kortix", email = "oss@kortix.so" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["search", "semantic-search", "bm25", "embeddings", "local", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Indexing",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "numpy>=1.24",
  "openai>=1.30.0",
  "pdfminer.six>=20221105",
  "python-docx>=1.0.0",
  "openpyxl>=3.1.0",
  "python-pptx>=1.0.0",
  "beautifulsoup4>=4.12.0",
  "watchdog>=4.0.0",
]

[project.scripts]
lss = "lss_cli:main"
lss-sync = "lss_sync:main"

[project.urls]
Homepage = "https://github.com/kortix-ai/lss"
Documentation = "https://github.com/kortix-ai/lss#readme"
Issues = "https://github.com/kortix-ai/lss/issues"
Changelog = "https://github.com/kortix-ai/lss/releases"

[project.optional-dependencies]
local = [
  "fastembed>=0.4.0",
]
dev = [
  "pytest>=8.2",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "black>=24.3.0",
  "pre-commit>=3.7.0",
  "ranx>=0.3.16",
]
build = [
  "nuitka>=2.4",
  "pyinstaller>=6.6",
]

[dependency-groups]
build = [
    "nuitka>=2.7.14",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
exclude = ["dist", "build", ".venv"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
exclude = "tests/|dist/|build/"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

# Optional packager hints
[tool.nuitka]
standalone = true
onefile = true
nofollow_imports = true
warn_unusual_code = true
